--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "start:server": "npx json-server --watch db.json --port 4000 --delay 1500"
   },
   "dependencies": {
     "@paystackhq/pax": "/Users/alexander/Documents/Paystack-Code/pax",
@@ -25,6 +26,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "eslint": "^8.27.0",
+    "json-server": "^0.17.1",
     "typescript": "^4.8.4"
   },
   "engines": {
